# wallet_call

./: .gitignore  .prettierrc  Cargo.toml  README.md  dfx.json  dfx.ts  ego-config.json  ego-projects.json  jest.config.js  package.json  tsconfig.json
artifacts/test_canister/: dfx.json  test_canister.auto.did  test_canister_opt.wasm
artifacts/wallet_canister/: dfx.json  wallet_canister.auto.did  wallet_canister.did  wallet_canister_opt.wasm
canisters/: Cargo.toml
canisters/dapp/test_canister/actor/: Cargo.toml
canisters/dapp/test_canister/actor/src/: actor.rs
canisters/dapp/test_canister/mod/: Cargo.toml
canisters/dapp/wallet_canister/actor/: Cargo.toml
canisters/dapp/wallet_canister/actor/src/: actor.rs  main.rs
canisters/dapp/wallet_canister/mod/: Cargo.toml
canisters/dapp/wallet_canister/mod/src/: service.rs  types.rs
canisters/test_canister/: test_canister.did
canisters/test_canister/actor/: Cargo.toml
canisters/test_canister/actor/src/: main.rs
canisters/test_canister/mod/: Cargo.toml
canisters/wallet_canister/: wallet_canister.did
canisters/wallet_canister/actor/: Cargo.toml
canisters/wallet_canister/actor/src/: actor.rs  main.rs
canisters/wallet_canister/mod/: Cargo.toml
canisters/wallet_canister/mod/src/: mod.rs  service.rs  types.rs
clients/idls/: test_canister.d.ts  test_canister.idl.ts  wallet_canister.d.ts  wallet_canister.idl.ts
clients/tests/: proxyActor.ts  walletCall.test.ts
configs/: test_canister.json  wallet_canister.json
scripts/: builder.ts  config.ts
src/: proxy.ts
test/: walletCall.test.ts
