[package]
name = "wallet_canister"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "wallet-canister"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
wallet_canister_mod = {path = "../mod"}
ego_lib = "0.3.4"
ego_macros = "0.1.5"
ego_types = "0.1.2"
